--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@ background-color: #00539F;
 body {
   width: 600px;
   margin: 0 auto;
-  background-color: #ff006a;
+  background-color: #FF6600;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
